--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,22 @@
 node_modules
 
-# Output
+### Output ###
 .output
 .vercel
 /.svelte-kit
 /build
 
-# OS
+### OS ###
 .DS_Store
 Thumbs.db
 
-# Env
+### Env ###
 .env
 .env.*
 !.env.example
 !.env.test
 
-# Vite
+### Vite ###
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
