--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@remix-run/react": "^2.13.1",
     "@remix-run/serve": "^2.13.1",
     "isbot": "^4.1.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
